compiler/typ/tests/fixtures/diagnostics/0173_adt_constructor_int_arg_mismatch_05.ml.infer.expected
File "0173_adt_constructor_int_arg_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0173_adt_constructor_int_arg_mismatch_05 is not a valid module name.

File "0173_adt_constructor_int_arg_mismatch_05.ml", line 2, characters 12-16:
2 | let _ = Hot true
                ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
